--- a/demo-app/Jenkinsfile
+++ b/demo-app/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
    stages {
       stage('Prepare') {
          steps {
-            kubernetesDeploy(kubeconfigId:'mykubeconfig', configs:'deployment.yaml')
+            kubernetesDeploy(kubeconfigId:'mykubeconfig', configs:'demo-app/deployment.yaml')
          }
       }
       stage('Build') {
