--- a/demo-app/deployment.yaml
+++ b/demo-app/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: k8sdemo
-        image: thara0402/k8sdemo:0.10.0
+        image: thara0402/k8sdemo:$DOCKER_IMAGE_TAG
         ports:
           - containerPort: 80
         livenessProbe:
