--- a/demo-app/service.yaml
+++ b/demo-app/service.yaml
@@ -2,9 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: demo-service
+  namespace: $NAMESPACE
   labels:
     app: demo-app
-    version: v10
+    version: $VERSION
 spec:
   ports:
   - port: 80
@@ -12,5 +13,5 @@ spec:
     targetPort: 80
   selector:
     app: demo-app
-    version: v10
+    version: $VERSION
   type: LoadBalancer
