--- a/demo-app/Jenkinsfile
+++ b/demo-app/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
    agent any
    environment {
       DOCKER_IMAGE_TAG = '0.12.0'
-      NAMESPACE = 'cutomer-a'
+      NAMESPACE = 'customer-a'
       VERSION = 'v1'
    }
    stages {
