--- a/nvx-cms/service.yaml
+++ b/nvx-cms/service.yaml
@@ -1,17 +1,38 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: demo-service
+  name: nvx-service-cms
   namespace: $NAMESPACE
   labels:
-    app: demo-app
+    app: nvx-service-cms
     version: $VERSION
 spec:
-  ports:
-  - port: 80
-    name: http
-    targetPort: 80
-  selector:
-    app: demo-app
-    version: $VERSION
   type: LoadBalancer
+  ports:
+    - port: 443
+      targetPort: 443
+      protocol: TCP
+      name: https
+    - port: 80
+      targetPort: 80
+      protocol: TCP
+      name: http
+    - port: 22
+      targetPort: 22
+      protocol: TCP
+      name: ssl
+    - port: 8443
+      targetPort: 8443
+      protocol: TCP
+      name: common-api
+    - port: 5701
+      targetPort: 5701
+      protocol: TCP
+      name: cluster-port
+    - port: 15701
+      targetPort: 15701
+      protocol: TCP
+      name: eventbus-port
+  selector:
+    app: nvx-service-cms
+    version: $VERSION
