--- a/nvx-cms-swap/Jenkinsfile
+++ b/nvx-cms-swap/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
    agent any
    environment {
       NAMESPACE = 'customer001'
-      VERSION = 'green'
+      VERSION = 'blue'
    }
    stages {
       stage('Prepare') {
