--- a/nvx-cms/blue-green/Jenkinsfile
+++ b/nvx-cms/blue-green/Jenkinsfile
@@ -1,9 +1,9 @@
 pipeline {
    agent any
    environment {
-      DOCKER_IMAGE_TAG = '0.10.0'
+      DOCKER_IMAGE_TAG = '0.12.0'
       NAMESPACE = 'customer001'
-      VERSION = 'green'
+      VERSION = 'blue'
    }
    stages {
       stage('Prepare') {
