--- a/nvx-cms/deployment.yaml
+++ b/nvx-cms/deployment.yaml
@@ -21,10 +21,29 @@ spec:
       containers:
       - image: thara0402/k8sdemo:$DOCKER_IMAGE_TAG
         name: nvx-service-cms
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          timeoutSeconds: 1
+          failureThreshold: 3
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 15
+          periodSeconds: 10
+          timeoutSeconds: 1
+          failureThreshold: 3
         resources:
+          requests:
+            memory: "100Mi"
+            cpu: "100m"
           limits:
-#            memory: "512Mi"
-#            cpu: "500m"
+            memory: "200Mi"
+            cpu: "200m"
         env:
         - name: LANG
           value: en_US.UTF-8
