--- a/nvx-cms/Jenkinsfile
+++ b/nvx-cms/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
    agent any
    environment {
-      DOCKER_IMAGE_TAG = '3.0.0'
+      DOCKER_IMAGE_TAG = '1.0.0-SNAPSHOT'
       NAMESPACE = 'customer001'
       VERSION = 'blue'
    }
