--- a/nvx-cms/deployment.yaml
+++ b/nvx-cms/deployment.yaml
@@ -66,12 +66,19 @@ spec:
             mountPath: "/sony/data"
           - name: "log"
             mountPath: "/sony/nvx/log"
+      # volumes:
+      #   - name: data
+      #     persistentVolumeClaim:
+      #       claimName: nvx-cms-data-pvc
+      #   - name: log
+      #     persistentVolumeClaim:
+      #       claimName: nvx-cms-log-pvc
       volumes:
         - name: data
-          persistentVolumeClaim:
-            claimName: nvx-cms-data-pvc
+          hostPath:
+            path: "/home/yuta_matsui/sony/data"
         - name: log
-          persistentVolumeClaim:
-            claimName: nvx-cms-log-pvc
+          hostPath:
+            path: "/home/yuta_matsui/sony/log/cms"
       imagePullSecrets:
         - name: nvx-service-secret
