--- a/nvx-cms/deployment.yaml
+++ b/nvx-cms/deployment.yaml
@@ -22,22 +22,22 @@ spec:
       - image: sonymst.azurecr.io/nvx-cms:$DOCKER_IMAGE_TAG
       # - image: nginx:$DOCKER_IMAGE_TAG
         name: nvx-service-cms
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 80
-          initialDelaySeconds: 10
-          periodSeconds: 10
-          timeoutSeconds: 1
-          failureThreshold: 3
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 80
-          initialDelaySeconds: 15
-          periodSeconds: 10
-          timeoutSeconds: 1
-          failureThreshold: 3
+        # livenessProbe:
+        #   httpGet:
+        #     path: /
+        #     port: 80
+        #   initialDelaySeconds: 10
+        #   periodSeconds: 10
+        #   timeoutSeconds: 1
+        #   failureThreshold: 3
+        # readinessProbe:
+        #   httpGet:
+        #     path: /
+        #     port: 80
+        #   initialDelaySeconds: 15
+        #   periodSeconds: 10
+        #   timeoutSeconds: 1
+        #   failureThreshold: 3
         resources:
           requests:
             memory: "100Mi"
